Remove invalid java opt