@@ -164,7 +164,6 @@
 
   :jvm-opts ["-Djava.net.preferIPv4Stack=true"
              "-server"
-             "-XX:MaxPermSize=256m"
              "-XX:+UseConcMarkSweepGC"
              "-Xss1m"
              "-Xmx1024m"
